force-app/main/default/objects/Account/fields/gTest__c.field-meta.xml
<CustomField>
    <fullName>gTest__c</fullName>
    <label>gTest</label>
    <length>50</length>
    <type>Text</type>
</CustomField>