force-app/main/default/objects/Account/fields/Is_Legit__c.field-meta.xml
<CustomField>
    <fullName>Is_Legit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Legit</label>
    <type>Checkbox</type>
</CustomField>