force-app/main/default/objects/Account/fields/Pipeline_Sync__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Sync__c</fullName>
    <label>Pipeline Sync</label>
    <length>250</length>
    <type>Text</type>
</CustomField>