force-app/main/default/objects/Account/fields/testField1__c.field-meta.xml
<CustomField>
    <fullName>testField1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testField1</label>
    <type>Checkbox</type>
</CustomField>