force-app/main/default/objects/Account/fields/TestRunEHField1__c.field-meta.xml
<CustomField>
    <fullName>TestRunEHField1__c</fullName>
    <label>TestRunEHField1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>